--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* All custom colors */
+:root {
+    --bg: #121316;
+    --color-main-text: #fff;
+    --color-button-text: rgba(255, 255, 255, 0.66);
+    --button-skill: rgba(255, 255, 255, 0.08);
+}
+
+* {
+    background: var(--bg);
+}
