Comments : TODO - home.component.html

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <section id="welcome">
     <p>home works!</p>
 </section>
-<section id="skill">
+<section id="skill"> <!-- Need to change icons with no background && import new images -->
     <app-skill-button [imagePath]="'assets/discord.svg'" [technology]="'HTML/CSS'"></app-skill-button>
     <app-skill-button [imagePath]="'assets/email.svg'" [technology]="'Angular'"></app-skill-button>
     <app-skill-button [imagePath]="'assets/github.svg'" [technology]="'SQL'"></app-skill-button>
