--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,11 +3,17 @@
     <p>home works!</p>
 </section>
 <section id="skill"> <!-- Need to change icons with no background && import new images -->
-    <app-skill-button [imagePath]="'assets/discord.svg'" [technology]="'HTML/CSS'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/email.svg'" [technology]="'Angular'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/github.svg'" [technology]="'SQL'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/linkedin.svg'" [technology]="'Python'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/discord.svg'" [technology]="'C#'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/developpement-web.png'" [technology]="'HTML/CSS'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/angular-logo.png'" [technology]="'Angular'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/sql.png'" [technology]="'SQL'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/python.png'" [technology]="'Python'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/java.png'" [technology]="'Java'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/c-sharp.png'" [technology]="'C#'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/Blazor.png'" [technology]="'Blazor'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/git.png'" [technology]="'Git'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/figma.png'" [technology]="'Figma'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/kotlin.png'" [technology]="'Kotlin'"></app-skill-button>
+    <app-skill-button [imagePath]="'assets/bash.png'" [technology]="'Bash'"></app-skill-button>
 </section>
 <section id="work"></section>
 <section id="contact"></section>
