--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
     --color-main-text: #fff;
     --color-button-text: rgba(255, 255, 255, 0.66);
     --button-skill: rgba(255, 255, 255, 0.08);
-    --blue-contact-button: #248AFF;
+    --hover-contact-button: rgba(255, 255, 255, 0.20);
 }
 
 * {
