--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <section id="welcome">
     <p>home works!</p>
 </section>
-<section id="skill"> <!-- Need to change icons with no background && import new images -->
+<section id="skill">
     <app-skill-button [imagePath]="'assets/developpement-web.png'" [technology]="'HTML/CSS'"></app-skill-button>
     <app-skill-button [imagePath]="'assets/angular-logo.png'" [technology]="'Angular'"></app-skill-button>
     <app-skill-button [imagePath]="'assets/sql.png'" [technology]="'SQL'"></app-skill-button>
