--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,17 +3,17 @@
     <p>home works!</p>
 </section>
 <section id="skill">
-    <app-skill-button [imagePath]="'assets/developpement-web.png'" [technology]="'HTML/CSS'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/angular-logo.png'" [technology]="'Angular'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/sql.png'" [technology]="'SQL'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/python.png'" [technology]="'Python'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/java.png'" [technology]="'Java'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/c-sharp.png'" [technology]="'C#'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/Blazor.png'" [technology]="'Blazor'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/git.png'" [technology]="'Git'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/figma.png'" [technology]="'Figma'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/kotlin.png'" [technology]="'Kotlin'"></app-skill-button>
-    <app-skill-button [imagePath]="'assets/bash.png'" [technology]="'Bash'"></app-skill-button>
+    <div class="grid">
+        <app-skill-button class="div1" [imagePath]="'assets/developpement-web.png'" [technology]="'HTML/CSS'"></app-skill-button>
+        <app-skill-button class="div2" [imagePath]="'assets/angular-logo.png'" [technology]="'Angular'"></app-skill-button>
+        <app-skill-button class="div3" [imagePath]="'assets/python.png'" [technology]="'Python'"></app-skill-button>
+        <app-skill-button class="div4" [imagePath]="'assets/java.png'" [technology]="'Java'"></app-skill-button>
+        <app-skill-button class="div5" [imagePath]="'assets/c-sharp.png'" [technology]="'C#'"></app-skill-button>
+        <app-skill-button class="div6" [imagePath]="'assets/Blazor.png'" [technology]="'Blazor'"></app-skill-button>
+        <app-skill-button class="div7" [imagePath]="'assets/sql.png'" [technology]="'SQL'"></app-skill-button>
+        <app-skill-button class="div8" [imagePath]="'assets/git.png'" [technology]="'Git'"></app-skill-button>
+        <app-skill-button class="div9" [imagePath]="'assets/figma.png'" [technology]="'Figma'"></app-skill-button>
+    </div>
 </section>
 <section id="work"></section>
 <section id="contact"></section>
